[project]
name = "messwithmodbus"
version = "1.0.0"
description = "Test Scripts for Messing With Modbus"
authors = [
    {name = "Mierowir",email = "mierowir@rose-hulman.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "scapy (>=2.7.0,<3.0.0)",
    "pymodbus (>=3.11.0, <3.12.0)",
    "returns (>=0.26.0,<0.27.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
